src/test/ui/issues/issue-10291.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/issue-10291.rs:13:9
   |
LL | fn test<'x>(x: &'x isize) {
   |         -- lifetime `'x` defined here
LL |     drop::<Box<for<'z> FnMut(&'z isize) -> &'z isize>>(Box::new(|z| {
LL |         x //~ ERROR E0312
   |         ^ returning this value requires that `'x` must outlive `'static`

error: aborting due to previous error

